Counter displayed correctly on mobile devices

--- a/react/counter/src/App.css
+++ b/react/counter/src/App.css
@@ -3,7 +3,7 @@
 }
 
 #main-container{
-  width: 30rem;
+  width: 100%;
   height: 70%;
   border-radius: 1rem;
   background-color: white;
@@ -11,7 +11,7 @@
 
 #title{
   margin: 0;
-  padding: 1rem 0;
+  padding: 1rem 1.5rem;
   color: var(--primary-color);
   text-align: center;
   border-top: 1.5rem solid var(--primary-color);
@@ -66,7 +66,7 @@
   padding: 0.4rem 0.8rem;
   border: 0.1rem solid var(--primary-color) ;
   color: var(--primary-color);
-  font-size: 1rem;
+  font-size: 1.2rem;
   cursor: pointer;
 }
 
@@ -76,16 +76,19 @@
 
 #jumper button{
   background-color: transparent;
-  margin: 0 0.5rem;
+  margin: 0 0.8rem;
   padding: 0.4rem;
   border: 0.1rem solid var(--primary-color) ;
   border-radius: 99rem;
   color: var(--primary-color);
-  font-size: 0.8rem;
-  font-weight: bold;
+  font-size: 1.4rem;
   cursor: pointer;
 }
 
 #jumper button:focus{
   outline: 0;
+}
+
+#jumper p{
+  font-size: 1.4rem;
 }
